Fixed some mistakes I found in index.html and style.css

--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     background: url(https://www.maxpixel.net/static/photo/2x/Drone-Sea-Blue-Birds-Eye-View-Ship-Beach-1897129.jpg);
     background-color: #68C2E5;
     background-blend-mode: screen;
-    border: thick solid #3D013C;}
+    border: thick solid #3D013C;
+}
 
 h1 {
     text-align: center;
