--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Cite: background code learned from CSS-Tricks*/
 body {
     font-family: 'Courier New', Courier, monospace;
     margin: 30px 50px;  
