--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*Cite: background code learned from CSS-Tricks*/
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Georgia, Times, serif;
   border: thick solid #3D013C;
   margin: 30px 50px;  
-  padding: 20px;
+  padding: 50px;
   background: url(https://www.maxpixel.net/static/photo/2x/Drone-Sea-Blue-Birds-Eye-View-Ship-Beach-1897129.jpg);
   background-color: #68C2E5;
   background-blend-mode: screen;
@@ -18,3 +18,6 @@ h2 {
   color: #60487F;
 }
 
+.places {
+  font-family: Arial, Helvetica, sans-serif
+}
